--- a/DB/DB/Info.plist
+++ b/DB/DB/Info.plist
@@ -64,5 +64,10 @@
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+   		<key>NSAllowsArbitraryLoads</key>
+   		<true/>
+	</dict>
 </dict>
 </plist>
