하..하루 빼먹음 하,,,

--- a/Project/Writing/Writing/Podfile
+++ b/Project/Writing/Writing/Podfile
@@ -11,6 +11,7 @@ target 'Writing' do
   pod 'NotificationBannerSwift', '~> 3.0.0'
   pod 'SwiftOverlays', '~> 5.0.1'
   pod 'Tabman', '~> 2.11'
+  pod 'MKRingProgressView'
   # Pods for Writing
 
 end
